<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/reedswitch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Temperature(°C)"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Humidity(%)"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/hum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="127dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical"
        android:paddingRight="10sp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <Button
            android:id="@+id/room1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/r1" />

        <Button
            android:id="@+id/room3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/r3" />

        <Button
            android:id="@+id/wash1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/w1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout4"
        android:orientation="vertical"
        android:paddingRight="10sp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <Button
            android:id="@+id/door"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="Door"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/room4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/r4" />

        <Button
            android:id="@+id/wash2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/w2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="144dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3"
        android:layout_toEndOf="@+id/linearLayout5"
        android:orientation="vertical">

        <Button
            android:id="@+id/room2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/r2" />

        <Button
            android:id="@+id/room5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:paddingLeft="10sp"
            android:text="@string/r5"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/wash3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/w3" />
    </LinearLayout>

</RelativeLayout>
